--- a/Payway/Views/Employee/Detail.cshtml
+++ b/Payway/Views/Employee/Detail.cshtml
@@ -1,5 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model EmployeeDetailViewModel
+
+    <div class="col-md-12 grid-margin grid-margin-md-0">
+        <div class="card">
+            <div class="card-body">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li class="breadcrumb-item"><a asp-action="Index">Employee List</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Employee Details</li>
+                    </ol>
+                </nav><br /><br />
+                            <div class="wrap d-flex justify-content-start justify-content-sm-center flex-wrap">
+                                <img class="rounded-circle shadow-lg style="width:300px; height:350px" src="@Url.Content(Model.ImageUrl)" alt="" />
+                                <div class="wrap align-items-center ml-5">
+                                    <p class="font-weight-bold text-success" style="font-size:20px">@Model.FullName</p>
+                                    <p class="font-weight-normal text-success"> Role: @Model.Designation</p>
+                                    <p class="font-weight-normal text-success"> Gender: @Model.Gender</p>
+                                    <p class="font-weight-normal text-success"> Date of birth @Model.DOB.ToString("dd/mm/yyyy")</p>
+                                    <p class="font-weight-normal text-success"> Employee Number: @Model.EmployeeNo</p>
+                                    <p class="font-weight-normal text-success"> NI Number: @Model.NationalInsuranceNo</p>
+                                    <p class="font-weight-normal text-success"> Email:  <a href="#">@Model.Email</a></p>
+                                    <p class="font-weight-normal text-success"> Phone: <a href="tel:@Model.Phone">@Model.Phone</a></p>
+                                    <br /><br />
+                                    <p class="font-weight-bold"> Pay & Deductions</p>
+                                    <hr style="background-color:crimson" />
+                                    <p class="font-weight-normal text-success"> Payment Method: @Model.PaymentMethod</p>
+                                    <p class="font-weight-normal text-success"> Student Loan: @Model.StudentLoan</p>
+                                    <p class="font-weight-normal text-success"> Union Member: @Model.UnionMember</p>
+                                    <p class="font-weight-normal text-success"><i class="fas fa-envelope" style="margin-right:0.6em; color:cornflowerblue"></i> <a href="mailto:@Model.Email?subject=Payslip&body=Attached within is your payslip.">Send Payslip</a></p>
+                                    <br /> <br />
+
+                                    <p class="font-weight-bold"> Address</p>
+                                    <hr style="background-color:crimson" />
+                                    <p class="font-weight-normal text-success"> @Model.Address</p>
+                                    <p class="font-weight-normal text-success"> @Model.City</p>
+                                    <p class="font-weight-normal text-success"> @Model.Postcode</p>
+                                    <br />
+                                    <br />
+
+                                </div>
+                            </div>
+                
+
+            </div>
+        </div>
+    </div>
