--- a/Payway/Views/Pay/Payslip.cshtml
+++ b/Payway/Views/Pay/Payslip.cshtml
@@ -31,17 +31,17 @@
                     <table class="table table-striped">
                         <thead class="table-dark">
                             <tr>
-                                <th>Earnings</th>
-                                <th>Hours</th>
-                                <th>Rates</th>
-                                <th>Amount</th>
-                                <th>Deductions</th>
-                                <th>Amount</th>
+                                <th>&nbsp;Earnings</th>
+                                <th>&nbsp;Hours</th>
+                                <th>&nbsp;Rates</th>
+                                <th>&nbsp;Amount</th>
+                                <th>&nbsp;Deductions</th>
+                                <th>&nbsp;Amount</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td><b>Basic : </b></td>
+                                <td><b>&nbsp;Basic : </b></td>
                                 <td>@Model.ContractualHours.ToString("f")</td>
                                 <td>@Model.HourlyRate.ToString("f")</td>
                                 <td>@Model.ContractualEarnings.ToString("C")</td>
@@ -49,7 +49,7 @@
                                 <td>@Model.Tax.ToString("C")</td>
                             </tr>
                             <tr>
-                                <td><b>Overtime : </b></td>
+                                <td><b>&nbsp;Overtime : </b></td>
                                 <td>@Model.OvertimeHours.ToString("f")</td>
                                 <td>@Model.OvertimeRate.ToString("f2")</td>
                                 <td>@Model.OvertimeEarnings.ToString("C")</td>
@@ -73,7 +73,7 @@
                                 <td>@Model.SLC.Value.ToString("C")</td>
                             </tr>
                             <tr>
-                                <td><b>Total : </b></td>
+                                <td><b>&nbsp;Total : </b></td>
                                 <td>@Model.HoursWorked</td>
                                 <td></td>
                                 <td>@Model.TotalEarnings.ToString("C")</td>
