--- a/Payway/Views/Home/Index.cshtml
+++ b/Payway/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Payway</h1>
+    <p>Your one-stop-shop for Payroll Management</a>.</p>
+    <p>Developed for Web Applications-19S1, Bucks New University</p>
 </div>
