--- a/Payway/Views/Employee/Detail.cshtml
+++ b/Payway/Views/Employee/Detail.cshtml
@@ -16,7 +16,7 @@
                                     <p class="font-weight-bold text-success" style="font-size:20px">@Model.FullName</p>
                                     <p class="font-weight-normal text-success"> Role: @Model.Designation</p>
                                     <p class="font-weight-normal text-success"> Gender: @Model.Gender</p>
-                                    <p class="font-weight-normal text-success"> Date of birth @Model.DOB.ToString("dd/mm/yyyy")</p>
+                                    <p class="font-weight-normal text-success"> Date of birth @Model.DOB.ToString("dd/MM/yyyy")</p>
                                     <p class="font-weight-normal text-success"> Employee Number: @Model.EmployeeNo</p>
                                     <p class="font-weight-normal text-success"> NI Number: @Model.NationalInsuranceNo</p>
                                     <p class="font-weight-normal text-success"> Email:  <a href="#">@Model.Email</a></p>
