--- a/Payway/Views/Home/Index.cshtml
+++ b/Payway/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Payway</h1>
-    <p>Your one-stop-shop for Payroll Management</a>.</p>
+    <p><a>Your one-stop-shop for Payroll Management</a>.</p>
 </div>
